==> glasgowPLI/WARDuino/src/Primitives/zephyr.cpp <==
#include <zephyr/device.h>
#include <zephyr/devicetree.h>
#include <zephyr/devicetree/gpio.h>
#include <zephyr/drivers/gpio.h>
#include <zephyr/drivers/pwm.h>
#include <zephyr/kernel.h>
#include <zephyr/sys/util_macro.h>
#include <chrono>
#include <cmath>
#include <cstdio>
#include <cstring>
#include <optional>
#include "../Memory/mem.h"
#include "../Utils/macros.h"
#include "../Utils/util.h"
#include "Mindstorms/Motor.h"
#include "Mindstorms/uart_sensor.h"
#include "primitives.h"
#define OBB_PRIMITIVES 0
#define OBB_PRIMITIVES 6
#define ALL_PRIMITIVES OBB_PRIMITIVES + 6

void install_primitives() {
    dbg_info("INSTALLING PRIMITIVES\n");
    install_primitive(chip_delay);
    install_primitive(chip_pin_mode);
    install_primitive(chip_digital_write);
    install_primitive_reverse(chip_digital_write);
    install_primitive(chip_digital_read);
    install_primitive(print_int);
    install_primitive(print_string);
    install_primitive(abort);

#ifdef CONFIG_BOARD_STM32L496G_DISCO
    install_primitive(drive_motor);
    install_primitive(stop_motor);
    install_primitive(drive_motor_ms);
    install_primitive(drive_motor_degrees);
    install_primitive_reverse(drive_motor_degrees);

    install_primitive(read_uart_sensor);
    install_primitive(setup_uart_sensor);

    k_timer_init(&heartbeat_timer, heartbeat_timer_func, nullptr);
    k_timer_start(&heartbeat_timer, K_MSEC(500), K_MSEC(500));
#endif
}
