==> glasgowPLI/WARDuino/src/Primitives/arduino.cpp <==
#include "Arduino.h"
#include <HTTPClient.h>
#include <WiFi.h>
#include <sys/time.h>
#include <cmath>
#include <cstdio>
#include <cstring>
#include "../Memory/mem.h"
#include "../Utils/macros.h"
#include "../Utils/util.h"
#include "../WARDuino/CallbackHandler.h"
#include "primitives.h"
#include <Adafruit_NeoPixel.h>
#define PIN 33
#define NUMPIXELS 64
#define delay_us(ms) delayMicroseconds(ms)
#include <SPI.h>

void install_primitives() {
    dbg_info("INSTALLING PRIMITIVES\n");
    install_primitive(abort);
    install_primitive(millis);
    install_primitive(micros);

    install_primitive(print_int);
    install_primitive(print_string);

    install_primitive(exit_vm);

    install_primitive(wifi_connect);
    install_primitive(wifi_connected);
    install_primitive(wifi_status);
    install_primitive(wifi_localip);

    install_primitive(http_get);
    install_primitive(http_post);

    install_primitive(chip_pin_mode);
    install_primitive(chip_digital_write);
    install_primitive(chip_delay);
    install_primitive(chip_digital_read);
    install_primitive(chip_analog_read);
    install_primitive(chip_delay_us);

    install_primitive(spi_begin);
    install_primitive(write_spi_byte);
    install_primitive(write_spi_bytes_16);

    install_primitive(subscribe_interrupt);
    install_primitive(unsubscribe_interrupt);

    install_primitive(mqtt_init);
    install_primitive(mqtt_connect);
    install_primitive(mqtt_connected);
    install_primitive(mqtt_state);
    install_primitive(mqtt_publish);
    install_primitive(mqtt_subscribe);
    install_primitive(mqtt_unsubscribe);
    install_primitive(mqtt_loop);

    install_primitive(init_pixels);
    install_primitive(set_pixel_color);
    install_primitive(clear_pixels);
    install_primitive(show_pixels);

    // temporary primitives needed for analogWrite in ESP32
    install_primitive(chip_analog_write);
    install_primitive(chip_ledc_setup);
    install_primitive(chip_ledc_attach_pin);
    install_primitive(chip_ledc_set_duty);

    dbg_info("INSTALLING ISRs\n");
    install_isrs();
}
